--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ button {
   border: none;
 }
 .home {
-  background: url(/img/background.png);
+  background: url(./img/background.png);
 }
 .y-center {
   display: flex;
