--- a/style.css
+++ b/style.css
@@ -336,8 +336,12 @@ header {
   width: 300px;
   height: 45px;
   justify-content: center;
+
   align-items: center;
   border: 1px solid #ffff;
+}
+.svg-support {
+  margin-right: 5px;
 }
 .support-card:hover {
   width: 300px;
@@ -346,7 +350,7 @@ header {
   border-radius: 4px;
   transition: 0.5s;
 }
-.support-card:hover .support-nav {
+.support-card:hover .p-grey {
   color: #ff3f3a;
   transition: 0.5s;
 }
@@ -359,11 +363,10 @@ header {
   justify-content: space-between;
 }
 
-.support-nav {
+.p-grey {
   font-weight: 700;
   font-size: 16px;
   color: #9a9ca5;
-  margin-left: 5px;
 }
 .support-p {
   font-weight: 400;
@@ -473,7 +476,7 @@ header {
   font-size: 20px;
   color: #1e212c;
   margin-bottom: 10px;
-  margin-left: 5px;
+  /* margin-left: 5px; */
 }
 .more {
   display: flex;
@@ -593,6 +596,7 @@ header {
 }
 .a-svg {
   margin-right: 18px;
+  cursor: pointer;
 }
 .a-svg:hover {
   fill: white;
@@ -669,7 +673,7 @@ header {
 .dot {
   cursor: pointer;
   width: 30px;
-  height: 2px;
+  height: 3px;
   background: #b3b7bc;
   margin-right: 12px;
 }
@@ -677,11 +681,29 @@ header {
 .dot:active {
   background-color: #000;
 }
+.braces {
+  width: 30px;
+  height: 20px;
+  margin-right: 30px;
+}
+.testimonials-text {
+  display: flex;
+}
 /* testimonials end */
 /* blog */
+.blog {
+  margin-bottom: 180px;
+}
 .blog-content {
   display: flex;
   justify-content: space-between;
+}
+.card-blog-content {
+  width: 390px;
+  padding: 0px 30px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 .blog-btn {
   width: 158px;
@@ -691,4 +713,160 @@ header {
   border-radius: 4px;
   color: #ffffff;
   margin-top: 20px;
+}
+/* blog card */
+.blog-cards {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+.blog-data {
+  display: flex;
+  justify-content: space-between;
+  width: 305px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.p-black {
+  font-size: 16px;
+  color: #1e212c;
+}
+.blog-card-btn {
+  display: flex;
+  width: 70px;
+
+  justify-content: space-between;
+}
+
+.blog-card-btn:hover {
+  border-bottom: 2px solid #ff3f3a;
+  transition: 0.2s;
+}
+/* blog end */
+/* last block */
+.heand-left {
+  position: absolute;
+  top: 8510px;
+  left: 0;
+}
+.heand-right {
+  position: absolute;
+  top: 8510px;
+  right: 0;
+}
+.last-block {
+  padding: 120px 0px;
+  width: 100%;
+  height: 300px;
+  background: url(./img/bg-color.png);
+}
+.last-form {
+  display: flex;
+  margin-top: 60px;
+}
+.last-btn {
+  width: 158px;
+  height: 52px;
+
+  background: linear-gradient(55.95deg, #ff3f3a 0%, #f75e05 100%);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.form-input {
+  width: 420px;
+  height: 52px;
+  border: none;
+  border: 1px solid #d7dadd;
+  border-radius: 4px;
+  margin-right: 25px;
+}
+/* last-block end */
+/* footer */
+footer {
+  width: 100%;
+  padding: 80px 0px;
+  height: 300px;
+  background: #1e212c;
+}
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-block {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+
+  width: 300px;
+}
+.footer-bottom-block {
+  position: absolute;
+  top: 9200px;
+  width: 100%;
+  height: 60px;
+  background: #373943;
+}
+.title-footer {
+  font-weight: 700;
+  font-size: 18px;
+  color: #ffffff;
+}
+.contact-footer {
+  display: flex;
+  align-items: center;
+}
+.img-footer {
+  opacity: 2;
+}
+.footer-p {
+  font-weight: 400;
+  font-size: 16px;
+
+  color: #919191;
+}
+.svg-footer {
+  margin-right: 10px;
+}
+.p-form {
+  font-weight: 400;
+  font-size: 10px;
+
+  color: #ffffff;
+}
+.form {
+  position: relative;
+  width: 290px;
+}
+.form input {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.12);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 4px;
+  outline: none;
+  padding: 10px;
+  color: #919191;
+  font-size: 1em;
+}
+.form span {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  color: #919191;
+  pointer-events: none;
+  text-transform: uppercase;
+}
+.form .arrow-footer {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 14px 1px;
+  align-items: center;
+}
+/* .form input:valid ~ span, */
+.form input:focus ~ span {
+  display: none;
 }
