--- a/img/style.css
+++ b/img/style.css
@@ -109,6 +109,72 @@ a {
 }
 
 /* burger menu */
+/* modal */
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.482);
+  z-index: 2;
+  left: 0;
+  top: 0;
+  /* display: none; */
+}
+.modal-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-modal {
+  width: 200px;
+  height: 60px;
+  background: #3f03fe;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin-top: 30px;
+}
+.modal-header {
+  display: flex;
+  justify-content: end;
+  margin: 0;
+}
+.input-modal {
+  width: 300px;
+  height: 30px;
+  border-radius: 10px;
+  border: 1px solid #3f03fe;
+}
+.centre {
+  display: flex;
+  justify-content: center;
+}
+h2 {
+  text-align: center;
+}
+.close {
+  width: 20px;
+  margin-top: 30px;
+}
+.lik {
+  color: black;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.482);
+}
+.modal-conteiner {
+  padding: 20px 30px;
+  width: 400px;
+  height: 500px;
+  background-color: #ffff;
+  margin-top: 100px;
+  border-radius: 30px;
+}
+/* modal */
 .home {
   background: url(./img/background.png);
   margin-bottom: 180px;
@@ -984,4 +1050,3 @@ footer {
   display: flex;
   align-items: center;
 }
-/* в */
